# zebec-anchor

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json
programs/multisig/src/: lib.rs
programs/zebec/: Cargo.toml
programs/zebec/src/: constants.rs  error.rs  lib.rs  utils.rs
programs/zebec/src/processor/: mod.rs
programs/zebec/src/processor/create_fee_account/: mod.rs
programs/zebec/src/processor/native_stream/: mod.rs
programs/zebec/src/processor/token_stream/: mod.rs
tests/: bulkTransfer.ts  bulkTransferToken.ts  multisig.ts  multisigNative.ts  multisigToken.ts  query.ts  tvl.ts  zebec.ts  zebecNative.ts  zebecToken.ts
tests/edgeCaseMultisig/native/firstCase/: NotEnoughOwnerError.ts
tests/edgeCaseMultisig/native/secondCase/: UnknownOwnerError.ts
tests/edgeCaseMultisig/spl/firstCase/: NotEnoughOwnerError.ts
tests/edgeCaseMultisig/spl/secondCase/: UnknownOwnerError.ts
tests/edgeCaseStream/native/eighteenthCase/: updateFeeCheckCancel.ts
tests/edgeCaseStream/native/eighthCase/: cancelBeforeStartTime.ts
tests/edgeCaseStream/native/eleventhCase/: startStreamInstantTransferError.ts
tests/edgeCaseStream/native/fifteenthCase/: changeWithdrawAmount.ts
tests/edgeCaseStream/native/fifthCase/: startWithDrawPauseResumeWithDrawBeforeEnd.ts
tests/edgeCaseStream/native/firstCase/: startPauseResumeWithdrawAfterEnd.ts  startPauseResumeWithdrawBeforeEnd.ts
tests/functional/: multisigNative.ts  multisigToken.ts  zebecNative.ts  zebecToken.ts
tests/src/: Accounts.ts  Constants.ts  types.ts  utils.ts
(+39 files in other folders)
