[package]
name = "zebec"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "zebec"


[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { features = ["init-if-needed"], version = "0.24.2" }
anchor-spl = "0.24.2"
solana-security-txt = "1.0.1"
